--- a/dkms.conf
+++ b/dkms.conf
@@ -1,8 +1,10 @@
-PACKAGE_NAME="hid-nintendo"
-PACKAGE_VERSION=1.2
-MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build/src modules"
-CLEAN="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build/src clean"
-BUILT_MODULE_NAME[0]="hid-nintendo"
-BUILT_MODULE_LOCATION[0]="src"
-DEST_MODULE_LOCATION[0]="/kernel/drivers/hid/"
+PACKAGE_NAME="$BUILT_MODULE_NAME-dkms"
+PACKAGE_VERSION=v1.3
+
+BUILT_MODULE_NAME="hid-nintendo"
+DEST_MODULE_LOCATION="/extra"
+
+CLEAN="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build clean"
+MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build modules"
+
 AUTOINSTALL=yes
