--- a/dkms.conf
+++ b/dkms.conf
@@ -1,10 +1,10 @@
 PACKAGE_NAME="$BUILT_MODULE_NAME-dkms"
-PACKAGE_VERSION=v1.10
+PACKAGE_VERSION="v1.10"
 
-BUILT_MODULE_NAME="hid-nintendo"
-DEST_MODULE_LOCATION="/extra"
+BUILT_MODULE_NAME[0]="hid-nintendo"
+DEST_MODULE_LOCATION[0]="/extra"
 
-CLEAN="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build clean"
-MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build modules"
+MAKE[0]="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build modules"
+CLEAN[0]="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build clean"
 
-AUTOINSTALL=yes
+AUTOINSTALL="yes"
