Rename driver to `hid-nx` -> v1.11
This commit renames the driver from `hid-nintendo` to `hid-nx`. This was
done to avoid confusion with the default `hid-nintendo` driver.

Thanks to how DKMS and the kernel Makefile work, the resulting
`modules.alias` will tell the kernel to use this driver for all Nintendo
Switch controllers, rather than the `hid-nintendo` driver, making
further configuration unnecessary (hopefully).

Version was bumped to v1.11 because of the rename.

Several bits of documentation were modified.

--- a/dkms.conf
+++ b/dkms.conf
@@ -1,7 +1,7 @@
 PACKAGE_NAME="$BUILT_MODULE_NAME-dkms"
-PACKAGE_VERSION="v1.10"
+PACKAGE_VERSION="v1.11"
 
-BUILT_MODULE_NAME[0]="hid-nintendo"
+BUILT_MODULE_NAME[0]="hid-nx"
 DEST_MODULE_LOCATION[0]="/extra"
 
 MAKE[0]="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build modules"
